--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
 
         <item name="android:layout_width">55dp</item>
         <item name="android:layout_height">45dp</item>
-        <item name="android:background">@drawable/shape1</item>
+        <item name="android:background">@drawable/spot_bg</item>
 
         <item name="android:inputType">numberDecimal</item>
         <item name="android:gravity">center</item>
@@ -50,8 +50,9 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">45dp</item>
         <item name="android:background">@drawable/shape1</item>
-        <item name="android:backgroundTint">@color/green</item>
 
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">20sp</item>
