--- a/app/src/main/res/layout/activity_semesters.xml
+++ b/app/src/main/res/layout/activity_semesters.xml
@@ -1,197 +1,235 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".SEMESTERS"
-    android:background="@drawable/noxgrey">
+    android:fillViewport="true"
+    >
+    <androidx.constraintlayout.widget.ConstraintLayout
 
-    <TextView
-        android:id="@+id/S1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="L01 - S1"
-        android:textAlignment="center"
-        android:textSize="35sp"
-        android:fontFamily="@font/poppins_bold"
-        android:textColor="@color/black"
-        android:layout_marginTop="80dp"
-        />
+        android:layout_height="fill_parent"
+        android:layout_weight="1.0"
 
-    <LinearLayout
-        android:id="@+id/S1layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/S1"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/gradient_bg"
-        android:paddingVertical="5dp"
-        android:paddingHorizontal="10dp"
-        android:layout_marginHorizontal="25dp"
-        >
+        android:background="#F9F9F8">
         <TextView
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="Semester 1 Grade:"
-            android:lines="1"
-            android:textAlignment="textStart"
-            android:textSize="22sp"
-            android:fontFamily="@font/poppins_bold"
-            android:textColor="@color/black"
-
-            android:layout_gravity="center_vertical"
-            tools:ignore="RtlCompat"
-            android:paddingStart="10dp"/>
-        <TextView
-            android:id="@+id/S1Grade"
+            android:id="@+id/majortxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:text=""
-            android:lines="1"
             android:textAlignment="center"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:fontFamily="@font/poppins_bold"
             android:textColor="@color/black"
-            android:layout_weight="7"
-            android:layout_gravity="center_vertical"
-            tools:ignore="RtlCompat"
-            android:paddingHorizontal="7dp"
-
-            />
-        <ImageView
-            android:id="@+id/clac1"
-            android:padding="3dp"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/calc"
-            android:layout_weight="1"
-            android:layout_marginStart="5dp"
-            android:onClick="gotoCalculate"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
             />
 
-    </LinearLayout>
-    <TextView
-        android:id="@+id/S2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/S1layout"
-        android:text="L01 - S2"
-        android:textAlignment="center"
-        android:textSize="35sp"
-        android:fontFamily="@font/poppins_bold"
-        android:textColor="@color/black"
-        android:layout_marginTop="50dp"
-        />
 
-    <LinearLayout
-        android:id="@+id/S2layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/S2"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/gradient_bg"
-        android:paddingVertical="5dp"
-        android:paddingHorizontal="10dp"
-        android:layout_marginHorizontal="25dp"
-        >
         <TextView
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="Semester 2 Grade:"
-            android:lines="1"
-            android:textAlignment="textStart"
-            android:textSize="22sp"
-            android:fontFamily="@font/poppins_bold"
-            android:textColor="@color/black"
-
-            android:layout_gravity="center_vertical"
-            tools:ignore="RtlCompat"
-            android:paddingStart="10dp"/>
-        <TextView
-            android:id="@+id/S2Grade"
+            android:id="@+id/S1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text=""
-            android:lines="1"
+            android:text="L01 - S1"
             android:textAlignment="center"
-            android:textSize="25sp"
+            android:textSize="35sp"
             android:fontFamily="@font/poppins_bold"
             android:textColor="@color/black"
-            android:layout_weight="7"
-            android:layout_gravity="center_vertical"
-            tools:ignore="RtlCompat"
-            android:paddingHorizontal="7dp"
-
+            android:layout_marginTop="55dp"
             />
-        <ImageView
-            android:id="@+id/clac2"
-            android:padding="3dp"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/calc"
-            android:layout_weight="1"
-            android:layout_marginStart="5dp"
+
+        <LinearLayout
+            android:id="@+id/S1layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/S1"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/shape1"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="10dp"
+            android:layout_marginHorizontal="30dp"
+            android:outlineSpotShadowColor="@color/black"
+            android:elevation="20dp"
             android:onClick="gotoCalculate"
+
+            >
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="Semester 1 Grade:"
+                android:lines="1"
+                android:textAlignment="textStart"
+                android:textSize="20sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:layout_gravity="center_vertical"
+                tools:ignore="RtlCompat"
+                android:paddingStart="10dp"/>
+            <TextView
+                android:id="@+id/S1Grade"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:text=""
+                android:lines="1"
+                android:textAlignment="center"
+                android:textSize="21sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                tools:ignore="RtlCompat"
+                android:paddingHorizontal="7dp"
+
+                />
+
+            <ImageView
+                android:id="@+id/clac1"
+                android:padding="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:src="@drawable/calc"
+                android:layout_weight="1.2"
+                android:layout_marginStart="5dp"
+
+                />
+
+        </LinearLayout>
+        <TextView
+            android:id="@+id/S2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/S1layout"
+            android:text="L01 - S2"
+            android:textAlignment="center"
+            android:textSize="35sp"
+            android:fontFamily="@font/poppins_bold"
+            android:textColor="@color/black"
+            android:layout_marginTop="50dp"
             />
-    </LinearLayout>
 
-    <TextView
-        android:id="@+id/year"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/S2layout"
-        android:text="Year Average"
-        android:textAlignment="center"
-        android:textSize="35sp"
-        android:fontFamily="@font/poppins_bold"
-        android:textColor="@color/black"
-        android:layout_marginTop="50dp"
+        <LinearLayout
+            android:id="@+id/S2layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/S2"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/shape1"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="10dp"
+            android:layout_marginHorizontal="30dp"
+            android:outlineSpotShadowColor="@color/black"
+            android:elevation="20dp"
+            android:onClick="gotoCalculate"
 
-        />
-    <TextView
-        android:id="@+id/yearGrade"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/year"
-        android:text=""
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:fontFamily="@font/poppins_bold"
-        android:textColor="@color/black"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/gradient_bg"
+            >
+            <TextView
 
-        android:paddingHorizontal="50dp"
-        />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semester 2 Grade:"
+                android:lines="1"
+                android:textAlignment="textStart"
+                android:textSize="20sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_gravity="center_vertical"
+                tools:ignore="RtlCompat"
+                android:paddingStart="10dp"/>
+            <TextView
+                android:id="@+id/S2Grade"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:lines="1"
+                android:textAlignment="center"
+                android:textSize="21sp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                tools:ignore="RtlCompat"
+                android:paddingHorizontal="7dp"
+
+                />
+            <ImageView
+                android:id="@+id/clac2"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:src="@drawable/calc"
+                android:layout_weight="1.2"
+                android:layout_marginStart="5dp"
+                android:padding="5dp"
+
+                />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/year"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Year Average"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toTopOf="@+id/yearGrade"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="15dp"
+
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/yearGrade"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="40dp"
+            android:background="@drawable/shape1"
+            android:elevation="20dp"
+            android:fontFamily="@font/poppins_bold"
+            android:gravity="center_vertical"
+            android:paddingHorizontal="50dp"
+            android:text=""
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="RtlCompat" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text=""
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/year"
+            app:layout_constraintTop_toBottomOf="@+id/S2layout"
+           />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
