--- a/app/src/main/res/layout/error_dialog.xml
+++ b/app/src/main/res/layout/error_dialog.xml
@@ -2,68 +2,83 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@drawable/shape1"
-    android:padding="5dp">
+    android:padding="10dp"
+    android:layout_gravity="center"
+
+    >
 
     <ImageView
         android:id="@+id/warn1"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:src="@drawable/warning"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/warning"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="20sp"/>
 
     <ImageView
         android:id="@+id/warn2"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:src="@drawable/warning"
+        app:layout_constraintEnd_toStartOf="@+id/warning"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="20sp"/>
 
     <TextView
         android:id="@+id/warning"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
-        app:layout_constraintLeft_toRightOf="@id/warn2"
-        app:layout_constraintRight_toLeftOf="@id/warn1"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="WARNING"
+
+        android:fontFamily="@font/poppins_bold"
         android:gravity="center"
+        android:text="WARNING"
         android:textAlignment="center"
-        android:textSize="40sp"
+        android:textColor="@color/black"
+        android:textSize="35sp"
         android:textStyle="bold"
-        android:textColor="@color/grey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlCompat" />
 
     <TextView
         android:id="@+id/txt1"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
 
         android:text="Please do not leave any empty fields "
         android:textAlignment="center"
-        android:textColor="@color/dark_grey"
-        android:textSize="27sp"
+        android:textColor="@color/grey"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/warning" />
+        app:layout_constraintTop_toBottomOf="@id/warning"
+        android:fontFamily="@font/roboto_black"/>
+
     <TextView
         android:id="@+id/txt2"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/roboto_black"
         android:text="or add grades greater than 20 "
         android:textAlignment="center"
-        android:textColor="@color/dark_grey"
-        android:textSize="25sp"
+        android:textColor="@color/grey"
+        android:textSize="20sp"
+
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt1" />
+        app:layout_constraintTop_toBottomOf="@id/txt1"
+        android:layout_marginBottom="20dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
