--- a/app/src/main/res/values-v26/themes.xml
+++ b/app/src/main/res/values-v26/themes.xml
@@ -4,14 +4,16 @@
     <style name="module_spot">
 
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">45dp</item>
+        <item name="android:layout_height">35dp</item>
         <item name="android:background">@drawable/shape1</item>
-        <item name="android:backgroundTint">@color/bg_blue</item>
+        <item name="android:paddingHorizontal">5dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:layout_margin">4dp</item>
-        <item name="android:paddingHorizontal">5dp</item>
+
 
     </style>
 </resources>
