--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="bg_blue">#3E497A</color>
     <color name="dark_blue">#21325E</color>
     <color name="grey">#53535B</color>
-    <color name="dark_grey">#373737</color>
+    <color name="dark_grey">#191919</color>
     <color name="green">#B8F1B0</color>
     <color name="ligt_green">#E3FCBF</color>
     <color name="dark_green">#14C38E</color>
@@ -20,4 +20,5 @@
     <color name="light_purple">#EA99D5</color>
     <color name="dark_purple">#8946A6</color>
     <color name="light_grey">#D3D3D3</color>
+    <color name="blue">#0AA1DD</color>
 </resources>
