--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,12 +11,22 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
         <!-- Customize your theme here. -->
+
+
+        <!-- To change the popup menu and app text color  -->
+        <item name="android:textColor">@color/black</item>
+
+        <!-- To change the background of options menu-->
+        <item name="android:itemBackground">@color/white</item>
     </style>
     <style name="grid_spot">
 
-        <item name="android:layout_width">55dp</item>
-        <item name="android:layout_height">45dp</item>
+        <item name="android:layout_weight">2</item>
+
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">35dp</item>
         <item name="android:background">@drawable/spot_bg</item>
 
         <item name="android:inputType">numberDecimal</item>
@@ -24,40 +34,51 @@
         <item name="android:maxLines">1</item>
         <item name="android:maxLength">5</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">13sp</item>
 
-        <item name="android:layout_margin">4dp</item>
+
+
+        <item name="android:layout_margin">5dp</item>
 
     </style>
     <style name="title_spot">
 
-        <item name="android:layout_width">55dp</item>
-        <item name="android:layout_height">45dp</item>
-        <item name="android:background">@drawable/shape1</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:background">@drawable/gradient_bg</item>
 
         <item name="android:inputType">numberDecimal</item>
         <item name="android:gravity">center</item>
 
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">12sp</item>
+
 
         <item name="android:layout_margin">4dp</item>
 
     </style>
     <style name="module_spot">
-
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">45dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/shape1</item>
-
+        <item name="android:paddingHorizontal" tools:targetApi="o">5dp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/poppins_bold</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:layout_margin">4dp</item>
 
 
     </style>
+
+    <style name="WrapContentDialog" parent="Theme.AppCompat.Light.Dialog">
+        <item name="windowMinWidthMajor">0%</item>
+        <item name="windowMinWidthMinor">0%</item>
+    </style>
+
+
+
 </resources>
